# wicked-agent

./: ARCHITECTURE.md  Cargo.toml  README.md  package-lock.json  package.json  problem-bench.json
docs/adr/: 0001-harness-model-multi-cli-shared-state.md  0002-command-iq-pattern-not-dependency.md  0003-forcing-rigor-on-wrapped-clis.md
lib/: events.mjs  inject.mjs  ledger.mjs  scope.mjs  session.mjs
lib/clients/: collection.mjs  council.mjs  governance.mjs  orchestration.mjs
schema/: 0001_init.sql
scripts/: claude-wrapped-agent.sh  demo-real-clis.sh
skills/agent-run/: SKILL.md
skills/agent-status/: SKILL.md
src/: distribute.rs  execute.rs  inject.rs  lib.rs  main.rs  plan.rs  resume.rs  scope.rs
test/: batch-d.e2e.test.mjs  batch-e.e2e.test.mjs  contract.test.mjs
test-fixtures/: fake-agent-cli.mjs
tests/: cogiq_bench.rs  full_e2e.rs  harness_e2e.rs  mcp_serve_proof.rs  real_claude_e2e.rs  real_claude_human_confirm_e2e.rs
