[package]
name = "wicked-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mikeparcewski/wicked-agent"
keywords = ["wicked", "agents", "ai", "harness", "swarm"]
categories = ["development-tools", "command-line-utilities"]
description = "The capstone harness — drives governance + orchestration + council on the shared wicked-estate store; plan -> distribute(council) -> execute(orchestration phases gated by governance) -> evidence; real wrapped CLIs."

[lib]
name = "wicked_agent"
path = "src/lib.rs"

[[bin]]
name = "wicked-agent"
path = "src/main.rs"

[dependencies]
wicked-apps-core = "0.1.0"
# Drives the three siblings in-process (cross-repo path deps).
wicked-governance = "0.1.0"
wicked-orchestration = "0.1.0"
wicked-council = "0.1.0"
wicked-estate-core = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
